[gd_scene load_steps=4 format=3 uid="uid://8lxqhot20wmr"]

[ext_resource type="Script" path="res://scenes/entity/base_enemy.gd" id="1_5vr3l"]
[ext_resource type="PackedScene" uid="uid://yotx3h561y2m" path="res://scenes/entity/enemy_orb.tscn" id="2_jp1dq"]
[ext_resource type="Script" path="res://utility/screen_wrap.gd" id="2_nmvka"]

[node name="BaseEnemy" type="CharacterBody2D" groups=["alien"]]
collision_layer = 4
collision_mask = 4
motion_mode = 1
script = ExtResource("1_5vr3l")
bullet_scene = ExtResource("2_jp1dq")
max_speed = 500

[node name="ScreenWrap" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("2_nmvka")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="hitbox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]

[node name="left" type="RayCast2D" parent="."]
unique_name_in_owner = true
position = Vector2(-8, -12)
target_position = Vector2(0, 45)
collision_mask = 20

[node name="right" type="RayCast2D" parent="."]
unique_name_in_owner = true
position = Vector2(8, -12)
target_position = Vector2(0, 45)
collision_mask = 20

[node name="attack_timer" type="Timer" parent="."]

[connection signal="body_entered" from="hitbox" to="." method="_on_hitbox_body_entered"]
